--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "animate.css": "^4.1.1",
         "bootstrap": "^5.2.2",
         "vue": "^3.2.36",
-        "vue-router": "^4.2.2"
+        "vue-router": "^4.2.2",
+        "vue3-carousel": "^0.3.1"
     }
 }
