--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "braintree": "^3.16.0",
         "swiper": "^10.0.4",
         "three": "^0.154.0",
+        "tween.js": "^16.6.0",
         "vue": "^3.2.36",
         "vue-router": "^4.2.2",
         "vue3-carousel": "^0.3.1"
